# antlr-playground

./: pyproject.toml
antlr_playground/: get_symbol.ipynb  handlers.py  main.py  playground.ipynb  symbol_finder.py  symbol_table.py
antlr_playground/examples/: TheQuickBrownFox.bds
antlr_playground/grammar/: __init__.py  bdsLexer.py  bdsListener.py  bdsParser.py
antlr_playground/grammar/.antlr/: bdsLexer.interp  bdsLexer.java  bdsLexerRules.java  bdsParser.java
tests/: handlers.py  test_get_symbol.py  test_symbol_table.py
